inserimento campo data e target,modifica modulo, iserimento target e controllo ip

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,9 +29,6 @@
                                             <a href="/Progetto/Create">nuovo progetto </a>
                                         
                                         </li>
-                                        <!--<li>
-                                            <a href="/Visualizza">visualizza progetti recenti</a>
-                                        </li>-->
                                         <li>
                                             <a href="/Progetto">visualizza progetti</a>
                                         </li>
@@ -78,10 +75,10 @@
                                 <div class="panel-body">
                                     <ul class="panel-default">
                                         <li>
-                                            <a href="/Report">importa report</a>
+                                            <a href="/Report">visualizza report</a>
                                         </li>
                                         <li>
-                                            <a href="/visualizzaReport">visualizza report</a>
+                                            <a href="/importaReport">importa report</a>
                                         </li>
                                      </ul>
                                 </div>
