--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <h2>Report</h2>
         <p class="lead">
-            I report presenti sono questi! Per importare un report <a >clicca qui</a> !
+            Per importare un report <a >clicca qui</a> !
         </p>
         <hr/>
         <div class="panel panel-default col-lg-10">
