--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -4,7 +4,6 @@
     <h2>Nuovo Progetto</h2>
     <hr />
     <div class="row panel panel-default col-md-9">
-        <!--<div class="col-md-9">-->
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
@@ -24,8 +23,7 @@
                     maxlength="1000"></textarea>
             </div>
             <div class="form-group col-sm-6 ">
-                <input type="submit" value="Create" class="btn btn-default" />
-
+                <input type="submit" value="Crea" class="btn btn-default" asp-action="/Progetto/Edit"/>  
             </div>
                 <div class="form-group col-sm-6 text-right">
                     <a asp-action="Index">Back to List</a>
