--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -9,7 +9,7 @@
             <input type="hidden" asp-for="ID" />
             <div class="form-group"><br>
                 <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
+                <input asp-for="Nome" class="form-control"  placeholder="nome"/>
                 <span asp-validation-for="Nome" class="text-danger"></span><br>
                 <div class="col-md-7 form-group">
                     <label for="oggi">Data</label>
@@ -19,7 +19,7 @@
                 <input type="text" class="form-control" id="codice" name="codice" placeholder="codice" onclick="creaCodice()">
                 <br>
                 <label for="descrizione">Descrizione</label>
-                <textarea class="form-control" id="descrizione" placeholder="descrizione del progetto" rows="5" cols="40" style="resize:none"
+                <textarea class="form-control" id="descrizione" placeholder="descrizione" rows="5" cols="40" style="resize:none"
                     maxlength="1000"></textarea>
             </div>
             <div class="form-group col-sm-6 ">
