--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -18,6 +18,7 @@
                 <label asp-for="Target" class="control-label"></label>
                 <input asp-for="Target" class="form-control" onfocusout="checkIP()" name="Target" />
                 <span asp-validation-for="Target" class="text-danger"></span>
+                <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>
                
                 <br>
                 <label for="descrizione">Descrizione</label>
@@ -40,11 +41,14 @@
 @section scripts{
     <script>
     function checkIP(){
-     var Target = $('input[name=Target]').val().toString().split(".");
+     var Target = $('input[name=Target]').val().split(".");
     console.log(Target);
     if (Target.length != 4) {
-        console.log("INVALIDO");
-        alert("Hai inserito un IP errato!"); 
+        console.log("INVALIDO: lunghezza sbagliata");
+        $('input[name=Target]').val("");
+        $('span[name=TargetValidation]').text('IP inserito non corretto!');
+       // alert("Hai inserito un IP errato!"); 
+        
         return false;
     }
     //Check Numbers
@@ -56,11 +60,13 @@
              Target[i].indexOf(" ") !== -1 ) {
                  console.log("INVALIDO");
                 // alert ("Hai inserito un IP errato!!");
-                 $('input[name=Target]').val(" ");
+         $('input[name=Target]').val("");
+        $('span[name=TargetValidation]').text('IP inserito non corretto!');
              return false;
         }
     }
     console.log("VALIDO");
+    $('span[name=TargetValidation]').text('');
 
     return true;
         
