Edit: parametri completi per nmap
Va ancora aggiustato il campo del Comando che dovrebbe automaticamente cambiare con i vari parametri ma non lo fa

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -411,16 +411,13 @@ body,html{
   fieldset{
     border-radius: 5px;
     background:#fefefe;
-    border: 50px solid;
+    border: 2px solid;
     padding: 1% 0%;
     margin:10px 0;
   }
   label{
-    position: relative;
+    /*position: relative;*/
     cursor: pointer;
     color: #666;
-    font-size: 30px;
+    
   }
-
-
-
