--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,40 +20,22 @@
 
 <body id="page-top">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div>
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class=" navbar-header page-scroll">
-            <a class="navbar-brand page-scroll" >
-                <strong> WEBMVA</strong>
-            </a></div>
-            <div class="offset-md-4" style="float:right">
-        <a class="navbar-brand page-scroll" href="/" >
-               <strong>Home</strong> 
-            </a>
-            </div>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <!--  <div class="col-12 col-md-8 align-self-start">
-                <div class="col-sm-6">
-                    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-                        <form class="navbar-form navbar-left" method="GET" role="search">
-                            <div class="form-group">
-                                <input type="text" name="q" class="form-control" placeholder="Search">
-                            </div>
-                            <button type="submit" class="btn btn-default">
-                                <i class="glyphicon glyphicon-search"></i>
-                            </button>
-                        </form>
-                    </div>
+    
+    <div class="container">
+        <nav class="nav navbar-default navbar-fixed-top">
+            <div>
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">
+                        <strong> WEBMVA</strong>
+                    </a>
                 </div>
-            </div>-->
-        <!-- /.navbar-collapse -->
-        
-        <!-- /.container-fluid -->
-    </nav>
-    <div class="container-fluid main-container">
-            @RenderBody()
+
+            </div>
+        </nav>
+        <div class="col-12"></div>
+        <br /><br />
+        @RenderBody()
     </div>
         
 
