--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,157 +1,157 @@
-﻿@{ ViewData["Title"] = "Home"; } 
+﻿@{ ViewData["Title"] = "Home"; }
 @model webmva.Models.Progetto
 
-<div class="col-md-2 sidebar" aria-expanded="false">
-    <div class="row">
-        <!-- uncomment code for absolute positioning tweek see top comment in css 
+      <div class="row">
+          
+              <!-- uncomment code for absolute positioning tweek see top comment in css
         <div class="absolute-wrapper"> </div>-->
-        <!-- Menu -->
-        <br>
-        <div class="side-menu col-6">
-            <nav class="navbar navbar-default" role="navigation">
-                <!-- Main Menu -->
-                <div class="side-menu-container">
-                    <ul class="nav navbar-nav" style="list-style-type:none">
+              <!-- Menu -->
+              <br>
+              <div class="col-sm-3">
+                  <!--<div class="sidebar" aria-expanded="false">-->
+                  <nav class="navbar navbar-default" role="navigation">
+                      <!-- Main Menu -->
+                      <!--<div class="side-menu-container">-->
+                      <ul class="form-group nav" style="list-style-type:none">
 
-                        <!-- Dropdown-->
-                        <li class=" panel-default" id="dropdown">
-                            <a data-toggle="collapse" href="#dropdown-lvl1">
-                                <span class="glyphicon glyphicon-barcode"></span>
-                                <strong> PROGETTO</strong>
-                                <span class="caret"></span>
-                            </a>
+                          <!-- Dropdown-->
+                          <li class=" panel-default" id="dropdown">
+                              <a data-toggle="collapse" href="#dropdown-lvl1">
+                                  <span class="glyphicon glyphicon-barcode"></span>
+                                  <strong> PROGETTO</strong>
+                                  <span class="caret"></span>
+                              </a>
 
-                            <!-- Dropdown level 1 -->
-                            <div id="dropdown-lvl1" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul class="panel-default">
-                                        <li>
-                                            <a href="/Progetto/Create">nuovo progetto </a>
-                                        
-                                        </li>
-                                        <li>
-                                            <a href="/Progetto">visualizza progetti</a>
-                                        </li>
+                              <!-- Dropdown level 1 -->
+                              <div id="dropdown-lvl1" class="panel-collapse collapse">
+                                  <div class="panel-body">
+                                      <ul class="panel-default">
+                                          <li>
+                                              <a href="/Progetto/Create">nuovo progetto </a>
+
+                                          </li>
+                                          <li>
+                                              <a href="/Progetto">visualizza progetti</a>
+                                          </li>
 
 
-                                    </ul>
+                                      </ul>
 
-                                </div>
-                            </div>
-                        </li>
-                        <li class="panel-default" id="dropdown">
-                            <a data-toggle="collapse" href="#dropdown-lvl2">
-                                <span class="glyphicon glyphicon-barcode"></span>
-                                <strong> MODULO</strong>
-                                <span class="caret"></span>
-                            </a>
+                                  </div>
+                              </div>
+                          </li>
+                          <li class="panel-default" id="dropdown">
+                              <a data-toggle="collapse" href="#dropdown-lvl2">
+                                  <span class="glyphicon glyphicon-barcode"></span>
+                                  <strong> MODULO</strong>
+                                  <span class="caret"></span>
+                              </a>
 
-                            <!-- Dropdown level 1 -->
-                            <div id="dropdown-lvl2" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul class="panel-default">
-                                        <li>
-                                            <a href="/Modulo/Create">nuovo modulo</a>
-                                        </li>
-                                        <li>
-                                            <a href="/Modulo">visualizza modulo</a>
-                                        </li>
+                              <!-- Dropdown level 1 -->
+                              <div id="dropdown-lvl2" class="panel-collapse collapse">
+                                  <div class="panel-body">
+                                      <ul class="panel-default">
+                                          <li>
+                                              <a href="/Modulo/Create">nuovo modulo</a>
+                                          </li>
+                                          <li>
+                                              <a href="/Modulo">visualizza modulo</a>
+                                          </li>
 
-                                        <!-- Dropdown level 2 -->
+                                          <!-- Dropdown level 2 -->
 
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-                        <li class=" panel-collapse" id="dropdown">
-                            <a data-toggle="collapse" href="#dropdown-lvl3">
-                                <span class="glyphicon glyphicon-barcode"></span>
-                                <strong> REPORT </strong>
-                                <span class="caret"></span>
-                            </a>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </li>
+                          <li class=" panel-collapse" id="dropdown">
+                              <a data-toggle="collapse" href="#dropdown-lvl3">
+                                  <span class="glyphicon glyphicon-barcode"></span>
+                                  <strong> REPORT </strong>
+                                  <span class="caret"></span>
+                              </a>
 
-                            <!-- Dropdown level 1 -->
-                            <div id="dropdown-lvl3" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <ul class="panel-default">
-                                        <li>
-                                            <a href="/Report">visualizza report</a>
-                                        </li>
-                                        <li>
-                                            <a href="/importaReport">importa report</a>
-                                        </li>
-                                     </ul>
-                                </div>
-                            </div>
-                        </li>
+                              <!-- Dropdown level 1 -->
+                              <div id="dropdown-lvl3" class="panel-collapse collapse">
+                                  <div class="panel-body">
+                                      <ul class="panel-default">
+                                          <li>
+                                              <a href="/Report">visualizza report</a>
+                                          </li>
+                                          <li>
+                                              <a href="/importaReport">importa report</a>
+                                          </li>
+                                      </ul>
+                                  </div>
+                              </div>
+                          </li>
 
-                    </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </nav>
+                      </ul>
+                      <!--</div>-->
+                      <!-- /.navbar-collapse -->
+                  </nav>
 
-        </div>
-    </div>
-</div>
+                  <!--</div>-->
+              </div>
 
-<div class="col-6 col-md-10">
+          <div class="col-sm-9 ">
 
-    <br>
 
-    <div class="col-5">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <strong>
-                    Cos'è WEBMVA?
-                </strong>
-            </div>
-            <div class="panel-body">
+              <!--<div class="col-5">-->
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <strong>
+                          Cos'è WEBMVA?
+                      </strong>
+                  </div>
+                  <div class="panel-body">
 
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-                sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
-                ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <strong>
-                    Contatti
-                </strong>
-            </div>
-            <div class="panel-body">
-                <ul class="panel-default" role="menu">
-                    <li class="">
-                        <strong>Professore</strong>
-                        <a href="http://computerscience.unicam.it/marcantoni/" target="blank">
-                            <strong>Fausto Marcantoni</strong>
-                        </a>
-                    </li>
-                    <li class="">
-                        <strong>Margherita Renieri:</strong>
-                        <a href="mailto:margherita.renieri@studenti.unicam.it"> margherita.renieri@studenti.unicam.it</a>
-                        <br />
-                    </li>
-                    <li class="">
-                        <strong>Riccardo Cannella:</strong>
-                        <a href="mailto:riccardo.cannella@studenti.unicam.it"> riccardo.cannella@studenti.unicam.it</a>
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+                      sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem
+                      ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </div>
+              </div>
+              <div class="panel panel-default">
+                  <div class="panel-heading">
+                      <strong>
+                          Contatti
+                      </strong>
+                  </div>
+                  <div class="panel-body">
+                      <ul class="panel-default" role="menu">
+                          <li class="">
+                              <strong>Professore</strong>
+                              <a href="http://computerscience.unicam.it/marcantoni/" target="blank">
+                                  <strong>Fausto Marcantoni</strong>
+                              </a>
+                          </li>
+                          <li class="">
+                              <strong>Margherita Renieri:</strong>
+                              <a href="mailto:margherita.renieri@studenti.unicam.it"> margherita.renieri@studenti.unicam.it</a>
+                              <br />
+                          </li>
+                          <li class="">
+                              <strong>Riccardo Cannella:</strong>
+                              <a href="mailto:riccardo.cannella@studenti.unicam.it"> riccardo.cannella@studenti.unicam.it</a>
 
-                </ul>
-            </div>
-        </div>
+                      </ul>
+                  </div>
+              </div>
 
-    </div>
-</div>
+          </div>
+          <!--</div>-->
+      </div>
 
