--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -22,10 +22,10 @@
                 <textarea class="form-control" id="descrizione" placeholder="descrizione" rows="5" cols="40" style="resize:none"
                     maxlength="1000"></textarea>
             </div>
-            <div class="form-group col-sm-6 ">
+            <div class="form-group col-6 ">
                 <input type="submit" value="Crea" class="btn btn-default" asp-action="/Progetto/Edit"/>  
             </div>
-                <div class="form-group col-sm-6 text-right">
+                <div class="form-group col-6 text-right">
                     <a asp-action="Index">Back to List</a>
                 </div>
         </form>
