--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -1,4 +1,4 @@
-@model webmva.Models.Progetto
+@model webmva.ViewModels.ProgettoVM;
  @{ ViewData["Title"] = "Edit"; }
 <div class="container">
     <h2>Modifica Progetto</h2>
@@ -6,31 +6,181 @@
     <div class="row panel panel-default col-md-9">
         <!--<div class="col-md-9">-->
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
+           <!-- <div asp-validation-summary="ModelOnly" class="text-danger"></div>--> 
+            <input type="hidden" asp-for="@Model.Progetto.ID" />
             <div class="form-group">
                 <br>
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+                <label asp-for="@Model.Progetto.Nome" class="control-label"></label>
+                <input asp-for="@Model.Progetto.Nome" class="form-control" />
+               <!-- <span asp-validation-for="@Model.Progetto.Nome" class="text-danger"></span>-->
                 
                 <br>
-                <label asp-for="Target" class="control-label"></label>
-                <input asp-for="Target" class="form-control" onfocusout="checkIP()" name="Target" />
-                <span asp-validation-for="Target" class="text-danger"></span>
-                <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>
-               
+                <label asp-for="@Model.Progetto.Target" class="control-label"></label>
+                <input asp-for="@Model.Progetto.Target" class="form-control" onfocusout="checkIP()" name="Target" />
+                <!--<span asp-validation-for="@Model.Progetto.Target" class="text-danger"></span>-->
+               <!-- <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>-->
+    
+                
+                  <br>
+                  <form name="modulo">	
+                <h5><strong>Scegli il modulo</strong></h5>
+                 <div class="col-6 col-md-10">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+					<a href="#" data-toggle="collapse" data-target="#Nmap">Nmap</a><br>
+                    <div class="collapse" id="Nmap">
+                     <div class="panel-body ">
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                             <th>
+                                        Nome
+                                            </th>
+                                            <th>
+                                        Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                    <input type="checkbox" name="selezionaTutto1" onclick="SelezTT1()" > <label> Scegli tutti</label><br>
+                                        </td>
+                                    </tr>
+                                    @foreach (var item in Model.TuttiModuli) { 
+                                        var tipo = item.GetType(); 
+                                        if(tipo!= typeof(webmva.Models.ModuloNMAP)){continue;}
+                                    <tr>
+                                   
+                                    
+                                        <td>
+                                        	<input type="checkbox" id="checkNmap" name="checkNmap" >
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                        </div>
+                      </div>
+                      </div>
+    
+					<div class="panel panel-default">
+                    <div class="panel-heading">
+					<a href="#" data-toggle="collapse" data-target="#Nessus">Nessus</a><br>
+                    <div class="collapse" id="Nessus">
+                     <div class="panel-body ">
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                             <th>
+                                        Nome
+                                            </th>
+                                            <th>
+                                        Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                    <input type="checkbox" name="selezionaTutto2" onclick="SelezTT2()" > <label> Scegli tutti</label><br>
+                                        </td>
+                                    </tr>
+                                    @foreach (var item in Model.TuttiModuli) { 
+                                        var tipo = item.GetType(); 
+                                        if(tipo!= typeof(webmva.Models.ModuloNESSUS)){continue;}
+                                    <tr>
+                                   
+                                    
+                                        <td>
+                                        	<input type="checkbox" id="checkNessus" name="checkNessus" >
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                        </div>
+                      </div>
+                      </div>
+                      <div class="panel panel-default">
+                    <div class="panel-heading">
+					<a href="#" data-toggle="collapse" data-target="#OpenVAS">OpenVAS</a><br>
+                    <div class="collapse" id="OpenVAS">
+                     <div class="panel-body ">
+                            <table class="table">
+                                <div class="method">
+                                    <thead>
+                                        <tr>
+                                             <th>
+                                        Nome
+                                            </th>
+                                            <th>
+                                        Comando
+                                            </th>
+                                            <th></th>
+                                        </tr>
+                                    </thead>
+                                </div>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                    <input type="checkbox" name="selezionaTutto3" onclick="SelezTT3()" > <label> Scegli tutti</label><br>
+                                        </td>
+                                    </tr>
+                                    @foreach (var item in Model.TuttiModuli) { 
+                                        var tipo = item.GetType(); 
+                                        if(tipo!= typeof(webmva.Models.ModuloNMAP)){continue;}
+                                    <tr>
+                                   
+                                    
+                                        <td>
+                                        	<input type="checkbox" id="checkOpenVAS" name="checkOpenVAS" >
+                                            @Html.DisplayFor(modelItem => item.Nome)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Comando)
+                                        </td>
+                                    </tr>
+                                    }
+                                </tbody>
+                            </table>
+
+                        </div>
+                        </div>
+                      </div>
+                      </div>		
+                </form>
+            
+            </div>
                 <br>
                 <label for="descrizione">Descrizione</label>
                 <textarea class="form-control" id="descrizione" placeholder="descrizione del progetto" rows="5" cols="40" style="resize:none"
                     maxlength="1000"></textarea>
             </div>
 
-            <div class="form-group col-sm-6 ">
+            <div class="form-group col-sm-6 "><br>
                 <input type="submit" value="Save" class="btn btn-default" />
 
             </div>
-            <div class="form-group col-sm-6 text-right">
+            <div class="form-group col-sm-6 text-right"><br>
                 <a asp-action="Index">Back to List</a>
             </div>
         </form>
@@ -71,6 +221,168 @@
     return true;
         
     };
-   
-</script>
+   function SelezTT(){
+      $('input[name=selezionaTutto]').change(
+        function(){
+            if( $('input[name=selezionaTutto]').prop('checked')){
+                var modulo = $('input[name=check]').each(function(index, element){
+                    $(element).prop('checked', true);
+                    console.log(index);
+                   
+                })
+               
+            }
+            else{
+                var modulo = $('input[name=check]').each(function(index, element){
+                    $(element).prop('checked', false);
+  
+                })
+                
+            }
+        });
+        
+        
+   };
+
+$(function(){
+    var tutticheck=true;
+    $('input[name=check]').change(
+        function(){
+            var check=$('input[name=check]');
+        for(i=0; i<check.length; i++){
+        if(!check[i].checked) {
+            tutticheck=false;
+            $('input[name=selezionaTutto]').prop('checked', false); 
+            break;
+        } else tutticheck=true;
+        if(tutticheck)
+        $('input[name=selezionaTutto]').prop('checked', true);
+    }
+        }
+    ).change();
+    });
+    //seleziona tutto Nmap
+     function SelezTT1(){
+      $('input[name=selezionaTutto1]').change(
+        function(){
+            if( $('input[name=selezionaTutto1]').prop('checked')){
+                var modulo = $('input[name=checkNmap]').each(function(index, element){
+                    $(element).prop('checked', true);
+                    console.log(index);
+                   
+                })
+               
+            }
+            else{
+                var modulo = $('input[name=checkNmap]').each(function(index, element){
+                    $(element).prop('checked', false);
+  
+                })
+                
+            }
+        });
+        
+        
+   };
+
+$(function(){
+    var tutticheck=true;
+    $('input[name=checkNmap]').change(
+        function(){
+            var check=$('input[name=checkNmap]');
+        for(i=0; i<check.length; i++){
+        if(!check[i].checked) {
+            tutticheck=false;
+            $('input[name=selezionaTutto1]').prop('checked', false); 
+            break;
+        } else tutticheck=true;
+        if(tutticheck)
+        $('input[name=selezionaTutto1]').prop('checked', true);
+    }
+        }
+    ).change();
+    });
+    //seleziona tutto Nessus
+     function SelezTT2(){
+      $('input[name=selezionaTutto2]').change(
+        function(){
+            if( $('input[name=selezionaTutto2]').prop('checked')){
+                var modulo = $('input[name=checkNessus]').each(function(index, element){
+                    $(element).prop('checked', true);
+                    console.log(index);
+                   
+                })
+               
+            }
+            else{
+                var modulo = $('input[name=checkNessus]').each(function(index, element){
+                    $(element).prop('checked', false);
+  
+                })
+                
+            }
+        });
+        
+        
+   };
+
+$(function(){
+    var tutticheck=true;
+    $('input[name=check]').change(
+        function(){
+            var check=$('input[name=checkNessus]');
+        for(i=0; i<check.length; i++){
+        if(!check[i].checked) {
+            tutticheck=false;
+            $('input[name=selezionaTutto2]').prop('checked', false); 
+            break;
+        } else tutticheck=true;
+        if(tutticheck)
+        $('input[name=selezionaTutto2]').prop('checked', true);
+    }
+        }
+    ).change();
+    });
+    //seleziona tutto OpenVAS
+     function SelezTT3(){
+      $('input[name=selezionaTutto]').change(
+        function(){
+            if( $('input[name=selezionaTutto]').prop('checked')){
+                var modulo = $('input[name=check]').each(function(index, element){
+                    $(element).prop('checked', true);
+                    console.log(index);
+                   
+                })
+               
+            }
+            else{
+                var modulo = $('input[name=check]').each(function(index, element){
+                    $(element).prop('checked', false);
+  
+                })
+                
+            }
+        });
+        
+        
+   };
+
+$(function(){
+    var tutticheck=true;
+    $('input[name=checkOpenVAS]').change(
+        function(){
+            var check=$('input[name=checkOpenVAS]');
+        for(i=0; i<check.length; i++){
+        if(!check[i].checked) {
+            tutticheck=false;
+            $('input[name=selezionaTutto3]').prop('checked', false); 
+            break;
+        } else tutticheck=true;
+        if(tutticheck)
+        $('input[name=selezionaTutto3]').prop('checked', true);
+    }
+        }
+    ).change();
+    });
+   </script>
 }
