--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -18,7 +18,7 @@
                 <label asp-for="@Model.Progetto.Target" class="control-label"></label>
                 <input asp-for="@Model.Progetto.Target" class="form-control" onfocusout="checkIP()" name="Target" />
                 <!--<span asp-validation-for="@Model.Progetto.Target" class="text-danger"></span>-->
-               <!-- <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>-->
+               <span name="TargetValidation" style="font-family: serif;font-size: 14px;color: #FF0000;"></span>
     
                 
                   <br>
