--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -171,17 +171,17 @@
             
             </div>
                 <br>
+                <div class="col-md-12">
                 <label for="descrizione">Descrizione</label>
                 <textarea class="form-control" id="descrizione" placeholder="descrizione del progetto" rows="5" cols="40" style="resize:none"
                     maxlength="1000"></textarea>
             </div>
-
-            <div class="form-group col-sm-6 "><br>
-                <input type="submit" value="Save" class="btn btn-default" />
-
             </div>
-            <div class="form-group col-sm-6 text-right"><br>
-                <a asp-action="Index">Back to List</a>
+ <div class="container">
+            <div class="form-group col-sm-6 "><br>
+                <input type="submit" value="Salva" class="btn btn-default" /> |
+                 <a asp-action="Index"> Back to List</a>
+                 </div>
             </div>
         </form>
 
