modifiche varie pagine modulo e progetto

--- a/Views/Modulo/Delete.cshtml
+++ b/Views/Modulo/Delete.cshtml
@@ -15,7 +15,7 @@
                         <dl class="dl-horizontal">
                             <div class="panel-body">
                                 <dt>
-                                    <strong> Nome : </strong>
+                                    <strong> Nome  </strong>
                                 </dt>
                                 <dd>
                                     @Html.DisplayFor(model => model.Nome)
@@ -23,7 +23,7 @@
                             </div>
                             <div class="panel-body">
                                 <dt>
-                                    <strong> Comando : </strong>
+                                    <strong> Comando  </strong>
                                 </dt>
                                 <dd>
                                     @Html.DisplayFor(model => model.Comando)
@@ -32,9 +32,9 @@
                         </dl>
                     </div>
                 </div>
-                <div class="col-xs-6  text-right">
+                <div class="col-md-6 ">
                     <div class="form-group">
-                        <input type="submit" value="Delete" class="btn btn-default" /> |
+                        <input type="submit" value="Cancella" class="btn btn-default" /> |
                         <a asp-action="Index">Back to List</a>
                     </div>
                 </div>
