--- a/Views/Modulo/Edit.cshtml
+++ b/Views/Modulo/Edit.cshtml
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 
-                <div class="col-md-9 text-right">
+                <div class="col-md-9 ">
                     <div class="form-group">
                         <input type="submit" value="Save" class="btn btn-default" /> |
                         <a asp-action="Index">Back to List</a>
