--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -132,7 +132,7 @@ var contOpenVAS = 0;}
                                 </dd>    
                         }  
                                 
-            <div class="container text-right">
+            <div class="container ">
                     <div class="form-group col-sm-6 ">
                         <input type="submit"  class="btn btn-default"asp-action="Delete" asp-route-id="@Model.ID" value="Cancella"> |
                         <a asp-action="Index"> Back to List</a>
