Tutto in italiano

--- a/Views/Modulo/Details.cshtml
+++ b/Views/Modulo/Details.cshtml
@@ -33,10 +33,10 @@
                         </dl>
                     </div>
                 </div>
-                <div class="col-xs-6 text-right">
+                <div class="col-xs-6">
                     <div class="form-group">
-                        <a asp-action="Edit" asp-route-id="@Model.ID">Edit </a>|
-                        <a asp-action="Index"> Back to List</a>
+                        <a class="btn btn-default" asp-action="Edit" asp-route-id="@Model.ID" >Modifica </a>&nbsp;|
+                        <a asp-action="Index"> Torna alla lista</a>
                     </div>
                 </div>
             </div>
