--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -31,15 +31,18 @@
                                     <div class="panel-body">
                                         <ul class="panel-default" style="list-style-type:none; margin-left:-40px">
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nmap">Nmap</a>
+                                                <a href="#" data-toggle="collapse" data-target="#Nmap">Nmap <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a> 
+                                            </li>
+                                            <li>
+                                                <a href="https://www.stationx.net/nmap-cheat-sheet/" target="_blank">Nmap Cheat Sheet</a>
                                             </li>
                                             <br>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#Nessus">Nessus</a>
+                                                <a href="#" data-toggle="collapse" data-target="#Nessus">Nessus <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <br>
                                             <li>
-                                                <a href="#" data-toggle="collapse" data-target="#OpenVAS">OpenVAS</a>
+                                                <a href="#" data-toggle="collapse" data-target="#OpenVAS">OpenVAS <span class="glyphicon glyphicon-play" style="font-size:65%"></span></a>
                                             </li>
                                             <br>
 
