--- a/Views/Progetto/Create.cshtml
+++ b/Views/Progetto/Create.cshtml
@@ -25,7 +25,7 @@
             <div class="container">
             <div class="form-group col-6 ">
                 <input type="submit" value="Crea" class="btn btn-default" asp-action="/Progetto/Edit"/> |
-                  <a asp-action="Index">Back to List</a>
+                  <a asp-action="Index">Torna alla lista</a>
             </div>
             </div>
             
