--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -134,7 +134,7 @@ var contOpenVAS = 0;}
             <div class="container">
                     <div class="form-group col-sm-6 ">
                         <a  class="btn btn-default"asp-action="Edit" asp-route-id="@Model.ID"> Modifica </a> |
-                        <a asp-action="Index"> Back to List</a>
+                        <a asp-action="Index"> Torna alla lista</a>
                    </div>
                 </div>
             </div>
