--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -183,7 +183,7 @@
 
             <div class="form-group col-sm-6 "><br>
                 <input type="submit" value="Salva" class="btn btn-default" /> |
-                 <a asp-action="Index"> Back to List</a>
+                 <a asp-action="Index"> Torna alla lista</a>
                  </div>
           
                 </form>
