--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -251,7 +251,7 @@
                                     </div> 			                   <div class="col-sm-6 col-sm-offset-6 text-right">
                                         <div class="form-group">
                                             <input type="submit" asp-action="Create" asp-route-cosa="nmap" class="btn btn-default" asp-route-id="@Model.NMAP.ID" value="Salva" />&nbsp;&nbsp;
-                                            <a asp-action="Index"> Back to List</a>
+                                            <a asp-action="Index"> Torna alla lista</a>
                                         </div>
                                     </div>
                                 </div>
