--- a/Views/Modulo/Delete.cshtml
+++ b/Views/Modulo/Delete.cshtml
@@ -35,7 +35,7 @@
                 <div class="col-md-6 ">
                     <div class="form-group">
                         <input type="submit" value="Cancella" class="btn btn-default" /> |
-                        <a asp-action="Index">Back to List</a>
+                        <a asp-action="Index">Torna alla lista</a>
                     </div>
                 </div>
             </div>
