--- a/Views/Progetto/Delete.cshtml
+++ b/Views/Progetto/Delete.cshtml
@@ -135,7 +135,7 @@ var contOpenVAS = 0;}
             <div class="container ">
                     <div class="form-group col-sm-6 ">
                         <input type="submit"  class="btn btn-default"asp-action="Delete" asp-route-id="@Model.ID" value="Cancella"> |
-                        <a asp-action="Index"> Back to List</a>
+                        <a asp-action="Index"> Torna alla lista</a>
                    </div>
                 </div>
             </div>
