Run Scan: Prima implementazione semi funzionante

--- a/Views/Progetto/Details.cshtml
+++ b/Views/Progetto/Details.cshtml
@@ -135,6 +135,7 @@ var contOpenVAS = 0;}
                     <div class="form-group col-sm-6 ">
                         <a  class="btn btn-default"asp-action="Edit" asp-route-id="@Model.ID"> Modifica </a> |
                         <a asp-action="Index"> Torna alla lista</a>
+                        <a asp-action="Run" asp-route-id="@Model.ID">RUN!</a>
                    </div>
                 </div>
             </div>
