modifiche grafiche pagina dei risultati

--- a/Views/Progetto/Run.cshtml
+++ b/Views/Progetto/Run.cshtml
@@ -1,13 +1,21 @@
 @model webmva.ViewModels.RisultatoVM
-<h3>Risultati per progetto @Model.NomeProgetto</h3>
-
+@{ ViewData["Title"] = "Risultato"; }
+<h3>Risultati per progetto @Model.NomeProgetto</h3><hr>
+<div class="container">
+    
 @foreach(var element in @Model.risultati)
 {
-
-<p>
-    <h4>Modulo @element.Key</h4>
-    <div class="panel panel-default">
-    @element.Value
+<div class="panel panel-default">
+  <div class="panel-heading">
+<h4>Modulo @element.Key</h4></div>
+<div class="panel-body">
+    @{string[] risultato= element.Value.Split(Environment.NewLine);}
+    @for(int i=0; i<risultato.Length; i++){
+        @risultato[i]
+        <br />
+    }
     </div>
-</p>
+</div>
 }
+
+</div>
